--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-
+title: Ali Ashraf
+logo: /assets/img/headshot_circle.png
+description: Cayman is a clean, responsive theme for GitHub Pages.
+show_downloads: true
+theme: jekyll-theme-cayman
