--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ali Ashraf
 logo: /assets/img/headshot_circle.png
-description: Cayman is a clean, responsive theme for GitHub Pages.
+description: Senior Android Developer
 show_downloads: true
 theme: jekyll-theme-cayman
