--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,6 @@ show_downloads: true
 theme: jekyll-theme-cayman
 
 author:
-  name: Your Name
-  email: your-email@example.com
-  avatar: /assets/profile.jpg
+  name: Ali Ashraf
+  email: sifyanali739@gmail.com
+  avatar: /assets/img/img_profile.png
