--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: Ali Ashraf
-logo: /assets/img/img_profile.png
 description: Senior Android Developer
-show_downloads: true
 theme: jekyll-theme-cayman
+url: "https://yourusername.github.io"
+baseurl: ""
 
 author:
-  name: Ali Ashraf
+  name: Your Name
   email: sifyanali739@gmail.com
-  avatar: /assets/img/img_profile.png
+  avatar: /assets/profile.jpg
