--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Ali Ashraf
 description: Senior Android Developer
 theme: jekyll-theme-cayman
-url: "https://yourusername.github.io"
+url: ""
 baseurl: ""
 
 author:
