_config.yml updated

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: "Senior Android Developer"
 description: "Showcasing my Android development projects and skills"
 theme: jekyll-theme-cayman
-url: "https://aliashraf-dev.github.io" # Update with your GitHub Pages URL
+url: "https://aliashraf-dev.github.io/portfolio/" # Update with your GitHub Pages URL
 baseurl: "" # Leave this empty unless your site is in a subdirectory
 
 # Author settings
