--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ baseurl: "" # Leave this empty unless your site is in a subdirectory
 author:
   name: "Your Name"
   email: "your-email@example.com"
-  avatar: "/assets/profile.jpg" # Ensure this path is correct and the image is in the assets directory
+  avatar: "/assets/profile.png" # Ensure this path is correct and the image is in the assets directory
 
 # Social links
 social:
