_config.yml updated

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Senior Android Developer"
 description: "Showcasing my Android development projects and skills"
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 #url: "https://aliashraf-dev.github.io/portfolio/" # Update with your GitHub Pages URL
 #baseurl: "" # Leave this empty unless your site is in a subdirectory
 
