_config.yml updated

--- a/_config.yml
+++ b/_config.yml
@@ -1,50 +1,4 @@
-title: "Senior Android Developer"
-description: "Showcasing my Android development projects and skills"
+title: Ali Ashraf
+logo: ![My Profile Image!](assets/profile.png)
+description: Senior Android Developer
 theme: jekyll-theme-minimal
-#url: "https://aliashraf-dev.github.io/portfolio/" # Update with your GitHub Pages URL
-#baseurl: "" # Leave this empty unless your site is in a subdirectory
-
-author:
-  name: "Ali Ashraf"
-  email: "your-email@example.com"
-  avatar: "/assets/profile.jpg" # Ensure this path is correct and the image is in the assets directory
-
-social:
-  github: "https://github.com/yourusername"
-  linkedin: "https://www.linkedin.com/in/yourusername/"
-  twitter: "https://twitter.com/yourusername"
-  stackoverflow: "https://stackoverflow.com/users/youruserid/yourusername"
-
-plugins:
-  - jekyll-feed
-  - jekyll-sitemap
-
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - README.md
-
-feed:
-  path: "feed.xml"
-
-custom:
-  skills:
-    - "Java"
-    - "Kotlin"
-    - "Android SDK"
-    - "Firebase"
-    - "MVVM"
-    - "REST APIs"
-  projects:
-    - name: "Project One"
-      description: "Description of project one."
-      url: "https://github.com/yourusername/project-one"
-    - name: "Project Two"
-      description: "Description of project two."
-      url: "https://github.com/yourusername/project-two"
-
-markdown: kramdown
-kramdown:
-  input: GFM
-
-permalink: pretty
