_config.yml updated

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Ali Ashraf
-logo: ![My Profile Image!](assets/profile.png)
+logo: assets/profile.png
 description: Senior Android Developer
 theme: jekyll-theme-minimal
