_config.yml updated

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Ali Ashraf
 logo: assets/profile.png
-description: Senior Android Developer
+description: Showcasing my Android development projects and skills
 theme: jekyll-theme-minimal
