--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: Ali Ashraf
 #logo: assets/profile.png
-description: I specialize in building robust Android applications using Java and Kotlin. With a solid understanding of Android SDK and modern architectures like MVVM, I strive to deliver high-quality, user-friendly mobile experiences.
-
+description: ""
 show_downloads: true
 theme: jekyll-theme-minimal
