--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ali Ashraf
-logo: assets/profile.png
-description: " "
+#logo: assets/profile.png
+description: ""
 #show_downloads: true
 theme: jekyll-theme-minimal
