--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Ali Ashraf
 logo: assets/profile.png
-description: "Showcasing my Android Development projects and skills"
+description: ""
 #show_downloads: true
 theme: jekyll-theme-minimal
 css: "/assets/css/custom.css"
