--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,14 @@
 title: Ali Ashraf
 logo: assets/profile.png
-description: " "
+description: ""
 #show_downloads: true
 theme: jekyll-theme-minimal
+
+# Add these lines to hide the description and footer
+defaults:
+  - scope:
+      path: ""
+    values:
+      site:
+        description: ""   # Ensure this is empty
+        footer: ""       # Hide footer if supported by the theme
