--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Ali Ashraf
 logo: assets/profile.png
-description: "                  "
+designation: "Android Developer"
+description: "I specialize in building robust Android applications using <strong>Java</strong> and <strong>Kotlin</strong>. With a solid understanding of the <strong>Android SDK</strong> and modern architectures like <strong>MVVM</strong>, I strive to deliver high-quality, user-friendly mobile experiences."
 #show_downloads: true
 theme: jekyll-theme-minimal
