--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Ali Ashraf
 logo: assets/img_profile_4.png
 description: " "
-#description: "I specialize in building robust Android applications using <strong>Java</strong> and <strong>Kotlin</strong>. With a solid understanding of the <strong>Android SDK</strong> and modern architectures like <strong>MVVM</strong>, I strive to deliver high-quality, user-friendly mobile experiences."
+#description: "I specialize in building robust Android applications using <strong>Java</strong>, <strong>Kotlin</strong> and <strong>Jetpack Compose</strong>. With a solid understanding of the <strong>Android SDK</strong> and modern architectures like <strong>MVVM</strong>, I strive to deliver high-quality, user-friendly mobile experiences."
 show_downloads: false
 theme: jekyll-theme-minimal
 ---
